--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "engines": {
+    "node": "10.14.1"
+  },
   "dependencies": {
     "express": "^4.16.4",
     "vue": "^2.5.17"
