--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "vue-cli-service serve --host localhost",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "engines": {
-    "node": "10.14.1"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve --host localhost",
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.16.4",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vuetify": "^1.3.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
@@ -24,6 +22,13 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
-    "vue-template-compiler": "^2.5.17"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.4.6",
+    "vue-template-compiler": "^2.5.17",
+    "vuetify-loader": "^1.0.5"
+  },
+  "engines": {
+    "node": "10.14.1"
   }
 }
